# LGA

./: Build.sh  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  WRECK  cfg.cpp  cfg.h  cmake_install.cmake  derivesToLambda.cpp  first.cpp  follow.cpp  goto_output.txt  item.cpp  ll-table.cpp  main.cpp  my-program.tar.xz  parser.cpp  predict.cpp  regex.cpp  scan.lut  setUnion.cpp  toNFA.cpp  token.cpp  util.cpp
include/: actionTable.h  cfg.h  closure.h  derivesToLambda.h  first.h  follow.h  goTo.h  item.h  ll-table.h  ll-tabular-parsing.h  llTable.h  parser.h  predict.h  regex.h  setUnion.h  toNFA.h  token.h  util.h
inputs/: assignlist.cfg  cfg1.cfg  cfg2.cfg  cfg3.cfg  cfg4.cfg  dead_simple.cfg  funky_grammar.cfg  my_grammar.cfg
testFiles/: assignlist.cfg  biglanguage_grammar.cfg  eplusnum.cfg  lectureExample.cfg  lecture_example.txt  lecture_example2.txt  lgc-predict-sets.cfg  llre.cfg  precexpr_grammar.cfg  predict-set-test0.cfg  predict-set-test1.cfg  prefix-sum_grammar.cfg
